--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -881,6 +881,7 @@ table {
 	margin-top: -6px;
 	color: #1f1f1f;
 	font-weight: bold;
+	padding-top: 20px;
 }
 
 .vue-grid-item {
@@ -936,25 +937,7 @@ table {
 	height: 100%;
 	position: relative;
 	z-index: 1;
-	.buttons {
-		position: absolute;
-		bottom: 0.75rem;
-		left: 0;
-		width: 100%;
-		.button {
-			margin-right: 0 !important;
-		}
-		.dropdown {
-			position: absolute;
-			bottom: 0;
-			&:nth-of-type(2n + 1) {
-				left: 0.75rem;
-			}
-			&:nth-of-type(2n) {
-				right: 0.75rem;
-			}
-		}
-	}
+	
 	.launch-container {
 		@extend .unselectable;
 		position: absolute;
@@ -963,12 +946,7 @@ table {
 		text-align: center;
 		left: 0;
 		right: 0;
-		z-index: 1;
-		.button.is-large {
-			display: inline-block;
-			font-weight: bold;
-			font-size: 2.5rem;
-		}
+		z-index: 1;		
 	}
 }
 @keyframes steam {
