Added title and new font

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -106,6 +106,7 @@ a.navbar-item.is-active,
 	padding: 20px 30px;
 	margin-bottom: 20px;
 	color: #fff;
+	font-family: 'AveriaSerif-Regular', sans-serif;
 }
 
 .connectBtn {
