menu items & responsive

--- a/src/assets/scss/kencss.scss
+++ b/src/assets/scss/kencss.scss
@@ -1,267 +1,267 @@
 /* MARGIN */
 
 .mt-1 {
-    margin-top: 10px;
+    margin-top: 10px !important;
 }
 
 .mt-2 {
-    margin-top: 20px;
+    margin-top: 20px !important;
 }
 
 .mt-3 {
-    margin-top: 30px;
+    margin-top: 30px !important;
 }
 
 .mt-4 {
-    margin-top: 40px;
+    margin-top: 40px !important;
 }
 
 .mb-5 {
-    margin-bottom: 50px;
+    margin-bottom: 50px !important;
 }
 
 .mb-1 {
-    margin-bottom: 10px;
+    margin-bottom: 10px !important;
 }
 
 .mb-2 {
-    margin-bottom: 20px;
+    margin-bottom: 20px !important;
 }
 
 .mb-3 {
-    margin-bottom: 30px;
+    margin-bottom: 30px !important;
 }
 
 .mb-4 {
-    margin-bottom: 40px;
+    margin-bottom: 40px !important;
 }
 
 .mb-5 {
-    margin-bottom: 50px;
+    margin-bottom: 50px !important;
 }
 
 .mr-1 {
-    margin-right: 10px;
+    margin-right: 10px !important;
 }
 
 .mr-2 {
-    margin-right: 20px;
+    margin-right: 20px !important;
 }
 
 .mr-3 {
-    margin-right: 30px;
+    margin-right: 30px !important;
 }
 
 .mr-4 {
-    margin-right: 40px;
+    margin-right: 40px !important;
 }
 
 .mr-5 {
-    margin-right: 50px;
+    margin-right: 50px !important;
 }
 
 .ml-1 {
-    margin-left: 10px;
+    margin-left: 10px !important;
 }
 
 .ml-2 {
-    margin-left: 20px;
+    margin-left: 20px !important;
 }
 
 .ml-3 {
-    margin-left: 30px;
+    margin-left: 30px !important;
 }
 
 .ml-4 {
-    margin-left: 40px;
+    margin-left: 40px !important;
 }
 
 .ml-5 {
-    margin-left: 50px;
+    margin-left: 50px !important;
 }
 
 
 /* MAX-WIDTH */
 
 .mw-10 {
-    max-width: 10px;
+    max-width: 10px !important;
 }
 
 .mw-20 {
-    max-width: 20px;
+    max-width: 20px !important;
 }
 
 .mw-30 {
-    max-width: 30px;
+    max-width: 30px !important;
 }
 
 .mw-40 {
-    max-width: 40px;
+    max-width: 40px !important;
 }
 
 .mw-50 {
-    max-width: 50px;
+    max-width: 50px !important;
 }
 
 .mw-60 {
-    max-width: 60px;
+    max-width: 60px !important;
 }
 
 .mw-70 {
-    max-width: 70px;
+    max-width: 70px !important;
 }
 
 .mw-80 {
-    max-width: 80px;
+    max-width: 80px !important;
 }
 
 .mw-90 {
-    max-width: 90px;
+    max-width: 90px !important;
 }
 
 .mw-100 {
-    max-width: 100px;
+    max-width: 100px !important;
 }
 
 .mw-150 {
-    max-width: 150px;
+    max-width: 150px !important;
 }
 
 .mw-200 {
-    max-width: 200px;
+    max-width: 200px !important;
 }
 
 .mw-250 {
-    max-width: 250px;
+    max-width: 250px !important;
 }
 
 .mw-300 {
-    max-width: 300px;
+    max-width: 300px !important;
 }
 
 .mw-350 {
-    max-width: 350px;
+    max-width: 350px !important;
 }
 
 .mx-400 {
-    max-width: 400px;
+    max-width: 400px !important;
 }
 
 .mx-500 {
-    max-width: 500px;
+    max-width: 500px !important;
 }
 
 /* PADDING */
 
 
 .p-1 {
-    padding: 10px;
+    padding: 10px !important;
 }
 
 .p-2 {
-    padding: 20px;
+    padding: 20px !important;
 }
 
 .p-3 {
-    padding: 30px;
+    padding: 30px !important;
 }
 
 .pt-1 {
-    padding-top: 10px;
+    padding-top: 10px !important;
 }
 
 .pt-2 {
-    padding-top: 20px;
+    padding-top: 20px !important;
 }
 
 .pt-3 {
-    padding-top: 30px;
+    padding-top: 30px !important;
 }
 
 .pt-4 {
-    padding-top: 40px;
+    padding-top: 40px !important;
 }
 
 .pt-5 {
-    padding-top: 50px;
+    padding-top: 50px !important;
 }
 
 .pb-1 {
-    padding-bottom: 10px;
+    padding-bottom: 10px !important;
 }
 
 .pb-2 {
-    padding-bottom: 20px;
+    padding-bottom: 20px !important;
 }
 
 .pb-3 {
-    padding-bottom: 30px;
+    padding-bottom: 30px !important;
 }
 
 .pb-4 {
-    padding-bottom: 40px;
+    padding-bottom: 40px !important;
 }
 
 .pb-5 {
-    padding-bottom: 50px;
+    padding-bottom: 50px !important;
 }
 
 .pl-1 {
-    padding-left: 10px;
+    padding-left: 10px !important;
 }
 
 .pl-2 {
-    padding-left: 20px;
+    padding-left: 20px !important;
 }
 
 .pl-3 {
-    padding-left: 30px;
+    padding-left: 30px !important;
 }
 
 .pl-4 {
-    padding-left: 40px;
+    padding-left: 40px !important;
 }
 
 .pl-5 {
-    padding-left: 50px;
+    padding-left: 50px !important;
 }
 
 .pr-1 {
-    padding-right: 10px;
+    padding-right: 10px !important;
 }
 
 .pr-2 {
-    padding-right: 20px;
+    padding-right: 20px !important;
 }
 
 .pr-3 {
-    padding-right: 30px;
+    padding-right: 30px !important;
 }
 
 .pr-4 {
-    padding-right: 40px;
+    padding-right: 40px !important;
 }
 
 .pr-5 {
-    padding-right: 50px;
+    padding-right: 50px !important;
 }
 
 
 /* ALIGNMENT */
 
 .ta-c {
-    text-align: -webkit-center;
-    text-align: center;
+    text-align: -webkit-center !important;
+    text-align: center !important;
 }
 
 .ta-r {
-    text-align: -webkit-right;
-    text-align: right;
+    text-align: -webkit-right !important;
+    text-align: right !important;
 }
 
 .ta-l {
-    text-align: -webkit-left;
-    text-align: left;
+    text-align: -webkit-left !important;
+    text-align: left !important;
 }
 
 /* ALL WIDTH */
@@ -306,97 +306,97 @@
 }
 
 .w-fit {
-    width: fit-content;
+    width: fit-content !important;
 }
 
 .h-fit {
-    height: fit-content;
+    height: fit-content !important;
 }
 
 .h-80 {
-    height: 80vh;
+    height: 80vh !important;
 }
 
 .min-h-20 {
-    min-height: 20vh;
+    min-height: 20vh !important;
 }
 
 .min-h-25 {
-    min-height: 25vh;
+    min-height: 25vh !important;
 }
 
 .min-h-30 {
-    min-height: 30vh;
+    min-height: 30vh !important;
 }
 
 .min-h-35 {
-    min-height: 35vh;
+    min-height: 35vh !important;
 }
 
 .min-h-40 {
-    min-height: 40vh;
+    min-height: 40vh !important;
 }
 
 .min-h-45 {
-    min-height: 45vh;
+    min-height: 45vh !important;
 }
 
 .min-h-50 {
-    min-height: 50vh;
+    min-height: 50vh !important;
 }
 
 .min-h-60 {
-    min-height: 60vh;
+    min-height: 60vh !important;
 }
 
 .min-h-70 {
-    min-height: 70vh;
+    min-height: 70vh !important;
 }
 
 .min-h-80 {
-    min-height: 80vh;
+    min-height: 80vh !important;
 }
 
 .max-h-80 {
-    min-height: 80vh;
+    min-height: 80vh !important;
 }
 
 .min-h-85 {
-    min-height: 85vh;
+    min-height: 85vh !important;
 }
 
 .min-h-85 {
-    min-height: 85vh;
+    min-height: 85vh !important;
 }
 
 .overflow-hidden {
-    overflow: hidden;
+    overflow: hidden !important;
 }
 
 .overflow-y {
-    overflow-y: scroll;
+    overflow-y: scroll !important;
 }
 
 .sal-end {
-    align-self: end;
+    align-self: end !important;
 }
 
 .t-dark {
-    color: #494949;
+    color: #494949 !important;
 }
 
 /* POSITION */
 
 .p-relative {
-    position: relative;
+    position: relative !important;
 }
 
 .p-absolute {
-    position: absolute;
+    position: absolute !important;
 }
 
 .nowrap {
-    white-space: nowrap;
+    white-space: nowrap !important;
 }
 
 .valign-middle {
@@ -404,8 +404,8 @@
 }
 
 .valign-middle div:first-child {
-    display: table-cell;
-    vertical-align: middle;
+    display: table-cell !important;
+    vertical-align: middle !important;
 }
 
 .valign-bottom {
@@ -413,54 +413,54 @@
 }
 
 .valign-bottom div:first-child {
-    display: table-cell;
-    vertical-align: bottom;
+    display: table-cell !important;
+    vertical-align: bottom !important;
 }
 
 .rl {
-    left: random(50);
+    left: random(50) !important;
 }
 
 .l-1 {
-    left: 10;
+    left: 10 !important;
 }
 
 .l-2 {
-    left: 20;
+    left: 20 !important;
 }
 
 .l-3 {
-    left: 30px;
+    left: 30px !important;
 }
 
 .l-4 {
-    left: 40px;
+    left: 40px !important;
 }
 
 .l-5 {
-    left: 50px;
+    left: 50px !important;
 }
 
 .r-1 {
-    right: 10px;
+    right: 10px !important;
 }
 
 .r-2 {
-    right: 20px;
+    right: 20px !important;
 }
 
 .r-3 {
-    right: 30px;
+    right: 30px !important;
 }
 
 .r-4 {
-    right: 40px;
+    right: 40px !important;
 }
 
 .r-5 {
-    right: 50px;
+    right: 50px !important;
 }
 
 .z-2 {
-    z-index: 2;
+    z-index: 2 !important;
 }
